Added "Manage User Requests Sequence" to report

--- a/4ο Παραδοτέο/Sequence-Diagrams/Files/Sequence-diagrams-v0.1.tex
+++ b/4ο Παραδοτέο/Sequence-Diagrams/Files/Sequence-diagrams-v0.1.tex
@@ -68,6 +68,7 @@
 \end{figure}
 
 \subsection{Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης}
+\textbf{Σημείωση:} Στο διάγραμμα αυτό τα εναλλακτικά blocks μέσα στο εναλλακτικό block "Προσθήκη σε empty" και "Προσθήκη με ήδη υπάρχουσα" είναι τα ίδια, απλά στη πρώτη περίπτωση λόγω περιορισμού χώρου δεν είναι τόσο ευκρινής το διάγραμμα.
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{Manage User Requests Sequence.png}
 	\caption{Sequence Diagram: Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης}
