--- a/4ο Παραδοτέο/Sequence-Diagrams/Files/Sequence-diagrams-v0.1.tex
+++ b/4ο Παραδοτέο/Sequence-Diagrams/Files/Sequence-diagrams-v0.1.tex
@@ -113,8 +113,8 @@
 
 \section{Συμμετοχή και Ρόλοι στη Συγγραφή του Κειμένου}
 \begin{enumerate}
-	\item \textbf{Γρηγόρης Καπαδούκας:} Author (Κεφαλαίων 1.1, 1.2, 1.3), Reviewer Όλων
-	\item \textbf{Χρήστος Μπεστητζάνος:} Author (Κεφαλαίων 1.5, 1.6), Editor, Reviewer (Κεφαλαίων 1.4, 1.7, 1.8, 1.9, 1.10)
+	\item \textbf{Γρηγόρης Καπαδούκας:} Author (Κεφαλαίων 1.1, 1.2, 1.3), Editor (Κεφαλαίων 1.9), Reviewer Όλων
+	\item \textbf{Χρήστος Μπεστητζάνος:} Author (Κεφαλαίων 1.5, 1.6), Editor (Κεφαλαίων 1.4, 1.7, 1.8, 1.10), Reviewer Όλων
    	\item \textbf{Νικόλαος Αυγέρης:} Author (Κεφαλαίων 1.7, 1.8, 1.9)
 	\item \textbf{Περικλής Κοροντζής:} Author (Κεφαλαίων 1.4, 1.10)
 \end{enumerate}
