--- a/Reports/Sequence-Diagrams/v1.0/Files/Sequence-diagrams-v1.0.tex
+++ b/Reports/Sequence-Diagrams/v1.0/Files/Sequence-diagrams-v1.0.tex
@@ -39,6 +39,12 @@
 %Insert Body Here
 \section{Sequence Diagrams}
 
+\textbf{Σημείωση έκδοσης v1.0:}
+
+Θέλαμε εδώ να επισημάνουμε ξανά, όπως κάναμε και στο τεχνικό κείμενο των robustness-diagrams-v1.0, ότι σε πολλές περιπτώσεις στα robustness diagrams λόγω της δομής τους αναγκαστήκαμε πολλές οθόνες που θέλαμε να είναι μια να τις δείξουμε ως πολλά συνοριακά αντικείμενα. Το ίδιο ισχύει και για τα αντικείμενα οντοτήτων, που όταν χρησιμοποιούνται πολλά στιγμιότυπα μιας τελικής κλάσεις, για λόγους συνέχειας αναπαραστάθηκαν τα στιγμιότυπα της ίδιας τελικής κλάσης ως ξεχωριστά αντικείμενα οντοτήτων.
+
+Οπότε για τους παραπάνω λόγους καταλήξαμε να μεταφέρουμε μόνο ένα από τα συνοριακά αντικείμενα και τα αντικείμενα οντοτήτων των robustness diagrams όταν αυτά ήταν διπλότυπα στα sequence diagrams, και να φτιάχνουμε μόνο μια κλάση στο class diagram και στον κώδικα.
+
 \subsection{Αναζήτηση βιβλίων / χρήστη / αιτήσεων}
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{Search Sequence.png}
@@ -52,6 +58,9 @@
 	\caption{Sequence Diagram: Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση}
 	\label{Sequence Diagram: Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση}
 \end{figure}
+\label{Rent}
+
+Εδώ αναφέρεται ότι η σειρά με την οποία οι δύο χειριστές επιλέγουν να μεταβούν μέσω του GUI στο SearchPage (μέσω του show\_Frame()) καθώς και η σειρά με την οποία γίνεται η ενημέρωση παραλαβής και επιστροφής (μέσω των updateStatus()) δεν έχει σημασία για το σύστημα. Το μόνο που ελέγχεται από το σύστημα είναι ότι και οι δύο χρήστες πρέπει να κάνουν ενημέρωση παραλαβής και μετά να κάνουν και οι δύο πάλι ενημέρωση επιστροφής.
 
 \subsection{Αποδοχή Αίτησης Βιβλίου και Ενοικίαση}
 \begin{figure}[H]
@@ -59,6 +68,8 @@
 	\caption{Sequence Diagram: Αποδοχή Αίτησης Βιβλίου και Ενοικίαση}
 	\label{Sequence Diagram: Αποδοχή Αίτησης Βιβλίου και Ενοικίαση}
 \end{figure}
+
+Στο sequence diagram για τη "Αποδοχή Αίτησης Βιβλίου και Ενοικίαση" ισχύουν οι ίδιες σημειώσεις και παραδοχές που ίσχυαν και για το sequence diagram στο κεφάλαιο \ref{Rent}, εφόσον τα δύο use cases "Αποδοχή Αίτησης Βιβλίου και Ενοικίαση" και "Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση" αποτελούν δύο πτυχές της ίδιας διαδικασίας, που εξηγήσαμε στο τεχνικό κείμενο "Use-cases-v1.0" γιατί τα αναφέρουμε ξεχωριστά.
 
 \subsection{Διαχείριση των βιβλίων που προσφέρει ο χρήστης προς ενοικίαση από άλλους}
 \begin{figure}[H]
