--- a/Reports/Sequence-Diagrams/v1.0/Files/Sequence-diagrams-v1.0.tex
+++ b/Reports/Sequence-Diagrams/v1.0/Files/Sequence-diagrams-v1.0.tex
@@ -80,6 +80,8 @@
 	\label{Sequence Diagram: Διαχείριση των βιβλίων που προσφέρει ο χρήστης προς ενοικίαση από άλλους}
 \end{figure}
 
+Σημειώνουμε εδώ ότι στο κώδικα έχουμε κάνει χρήση πολλών getters για να εμφανίσουμε πληροφορίες στο UI, που δεν τις εμφανίζουμε εδώ για λόγους απλότητας.
+
 \subsection{Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης}
 \textbf{Σημείωση:} Στο διάγραμμα αυτό τα εναλλακτικά blocks μέσα στο εναλλακτικό block "Προσθήκη σε empty" και "Προσθήκη με ήδη υπάρχουσα" είναι τα ίδια, απλά στη πρώτη περίπτωση λόγω περιορισμού χώρου δεν είναι τόσο ευκρινής το διάγραμμα.
 \begin{figure}[H]
