--- a/Reports/Sequence-Diagrams/v1.0/Files/Sequence-diagrams-v1.0.tex
+++ b/Reports/Sequence-Diagrams/v1.0/Files/Sequence-diagrams-v1.0.tex
@@ -83,12 +83,14 @@
 Σημειώνουμε εδώ ότι στο κώδικα έχουμε κάνει χρήση πολλών getters για να εμφανίσουμε πληροφορίες στο UI, που δεν τις εμφανίζουμε εδώ για λόγους απλότητας.
 
 \subsection{Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης}
-\textbf{Σημείωση:} Στο διάγραμμα αυτό τα εναλλακτικά blocks μέσα στο εναλλακτικό block "Προσθήκη σε empty" και "Προσθήκη με ήδη υπάρχουσα" είναι τα ίδια, απλά στη πρώτη περίπτωση λόγω περιορισμού χώρου δεν είναι τόσο ευκρινής το διάγραμμα.
+
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{Manage User Requests Sequence.png}
 	\caption{Sequence Diagram: Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης}
 	\label{Sequence Diagram: Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης}
 \end{figure}
+
+Σημειώνουμε εδώ ότι στο κώδικα έχουμε κάνει χρήση πολλών getters για να εμφανίσουμε πληροφορίες στο UI, που δεν τις εμφανίζουμε εδώ για λόγους απλότητας.
 
 \subsection{Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής}
 \begin{figure}[H]
@@ -133,5 +135,14 @@
    	\item \textbf{Νικόλαος Αυγέρης:} Author (Κεφαλαίων 1.7, 1.8, 1.9)
 	\item \textbf{Περικλής Κοροντζής:} Author (Κεφαλαίων 1.4, 1.10)
 \end{enumerate}
+
+\section{Αλλαγές από έκδοση σε έκδοση}
+
+\subsection{Από έκδοση v0.1 σε έκδοση v1.0}
+\begin{itemize}
+    \item Διόρθωση όλων των Sequence Diagrams, ώστε αυτές πλέον να αναπαριστούν κλάσεις και μάλιστα αυτές του κώδικα.
+    \item Αφαίρεση lifeline objects με μορφή boundary object και entity objects από τα πρώτα τρια sequence.
+    \item Ανανέωση των sequence ώστε να υπάρχει αντιστοιχία με τον κώδικα.
+\end{itemize}
 
 \end{document}
